--- a/style.css
+++ b/style.css
@@ -110,7 +110,11 @@ label{
     font-size: 20px;
 }
 
-
+.checkbox{
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
 
 @media screen and (min-width: 768px) {
     .parametro-coluna__senha{
