--- a/style.css
+++ b/style.css
@@ -121,9 +121,32 @@ label{
     height: 30px;
     width: 100%;
 }
-
+.forca{
+    height: 30px;
+    position: relative;
+    bottom: 30px;
+}
 .fraca{
-height: 30px;
-width: 25%;
-background-color: #E71B32;
+    width: 25%;
+    background-color: #E71B32; 
+}
+.media{
+    background-color: #FAF408;
+    width: 50%;
+}
+.forte{
+    background-color: #00FF85;
+    width: 100%;
+}
+
+.parametro-senha-textos{
+    display: flex;
+    justify-content: space-between;
+}
+
+
+@media screen and (min-width: 768px) {
+    .parametro-coluna__senha{
+        flex-direction: row;
+    }
 }
