--- a/style.css
+++ b/style.css
@@ -127,19 +127,22 @@ label{
     bottom: 30px;
 }
 .fraca{
-    width: 25%;
-    background-color: #E71B32; 
-}
-.media{
-    background-color: #FAF408;
-    width: 50%;
-}
-.forte{
-    background-color: #00FF85;
-    width: 100%;
+height: 30px;
+width: 25%;
+background-color: #E71B32;
+position: relative;
+bottom: 30px;
 }
 
 .parametro-senha-textos{
     display: flex;
     justify-content: space-between;
+}
+
+.media{
+height: 30px;
+width: 50%;
+background-color: #FAF408;
+position: relative;
+bottom: 30px;
 }
